test/errors/unrestr_local.sp
sorts
#s={f(a),b}.
predicates
p(#s).
rules
p(Z):- #count{X:p(Y)}.
